WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309293
Touch event regions may fail to generate correctly for SVGs
https://bugs.webkit.org/show_bug.cgi?id=309293
Summary
Touch event regions may fail to generate correctly for SVGs
Lily Spiniolas
Reported
2026-03-05 13:37:59 PST
rdar://171703966
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2026-03-05 21:04:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/60042
EWS
Comment 2
2026-03-10 13:21:30 PDT
Committed
309010@main
(7d23d960d9a8): <
https://commits.webkit.org/309010@main
> Reviewed commits have been landed. Closing PR #60042 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug